--- a/templates/pack/app/components/form/previewForm.html
+++ b/templates/pack/app/components/form/previewForm.html
@@ -1,5 +1,7 @@
-<form ng-submit="vm.onSubmit()">
-  <formly-form model="vm.user" fields="vm.userFields">
-    <button type="submit">Submit</button>
-  </formly-form>
-</form>
+<div class="main-form">
+    <form ng-submit="vm.onSubmit()">
+        <formly-form model="vm.user" fields="vm.userFields">
+            <button type="submit">Submit</button>
+        </formly-form>
+    </form>
+</div>
