--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -6,8 +6,11 @@
 </head>
 <body ng-app="app">
 <div ng-controller="MainController">
-  
+    <nav-bar></nav-bar>
     <preview-form></preview-form>
+    <center>
+        <!-- <simple-test></simple-test> -->    
+    </center>
   
 </div>
 <script src="bundle.js"></script>
