--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -3,16 +3,24 @@
 <head lang="en">
   <meta charset="UTF-8">
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
+  <script type="text/javascript">
+    var path = window.location.pathname;
+    var page = path.split("/").pop();
+    if(document.URL.indexOf("force") > 0) {
+        staticURL = "{!$Resource.ui_router}";
+    }else{
+        staticURL= "";
+    }
+    configSettings = {
+                        staticPath: staticURL,
+                        config: {},
+                        remoteActions: {}, 
+                        baseName: page
+    };
+    </script>
 </head>
 <body ng-app="app">
-<div ng-controller="MainController">
-    <nav-bar></nav-bar>
-    <preview-form></preview-form>
-    <center>
-        <!-- <simple-test></simple-test> -->    
-    </center>
-  
-</div>
+    <ui-view><ui-view>
 <script src="bundle.js"></script>
 </body>
 </html> 
